--- a/.gitignore
+++ b/.gitignore
@@ -2,20 +2,31 @@
 node_modules/
 /.pnp
 .pnp.js
+.yarn/
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
 
 # Testing
 /coverage
+*.lcov
+.nyc_output
 
 # Next.js
 /.next/
 /out/
+.next/
+out/
+*.js.map
+*.wasm
 
 # Production
 /build
 /dist
 
 # Misc
-.DS_Store
 *.pem
 
 # Debug
@@ -23,6 +34,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+lerna-debug.log*
 
 # Local env files
 .env
@@ -44,6 +56,11 @@ next-env.d.ts
 *.swp
 *.swo
 *~
+.project
+.classpath
+.settings/
+*.sublime-project
+*.sublime-workspace
 
 # OS
 .DS_Store
@@ -53,6 +70,7 @@ next-env.d.ts
 .Trashes
 ehthumbs.db
 Thumbs.db
+Desktop.ini
 
 # Logs
 logs
@@ -62,3 +80,25 @@ logs
 *.tmp
 *.temp
 .cache/
+.turbo/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache
+.parcel-cache
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
